# realtime-anomaly-engine

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run_dashboard.py  run_processor.py  run_producer.py
anomaly_engine/: config.py  database.py  llm_analyzer.py  streaming.py
data/: runbook.md
scripts/: setup_rag.py
